Add content to about.html page

--- a/pages/about.html
+++ b/pages/about.html
@@ -4,3 +4,10 @@ title: "About"
 description: ""
 ---
 {% include JB/setup %}
+
+##Hi
+Hello! I am Gopi Krishnan. I'm currently working at Intuit as a Senior Software Engineer on the <http://www.txtweb.com>txtWeb. This project aims at transforming the lives of billions of people who have access to a feature phone by delivering internet content via SMS.
+
+##Education 
+B.E. 			P.E.S. Institute of Technology, Bangalore, India
+			September 2007 - August 2011
