--- a/pages/about.html
+++ b/pages/about.html
@@ -3,11 +3,16 @@ layout: page
 title: "About"
 description: ""
 ---
+
 {% include JB/setup %}
 
-##Hi
+<b>Hi</b>
+<p>
 Hello! I am Gopi Krishnan. I'm currently working at Intuit as a Senior Software Engineer on the <http://www.txtweb.com>txtWeb. This project aims at transforming the lives of billions of people who have access to a feature phone by delivering internet content via SMS.
+</p>
+<b>Education</b>
+<p> 
+B.E.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;P.E.S. Institute of Technology, Bangalore, India<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;September 2007 - August 2011
+</p>
 
-##Education 
-B.E. 			P.E.S. Institute of Technology, Bangalore, India
-			September 2007 - August 2011
