Fix spacing issue

--- a/pages/about.html
+++ b/pages/about.html
@@ -13,6 +13,6 @@ Hello! I am Gopi Krishnan. I'm currently working at Intuit as a Senior Software 
 <b>Education</b>
 <p> 
 B.E.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;P.E.S. Institute of Technology, Bangalore, India<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;September 2007 - August 2011
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;September 2007 - August 2011
 </p>
 
