Fix href in About page

--- a/pages/about.html
+++ b/pages/about.html
@@ -8,11 +8,11 @@ description: ""
 
 <b>Hi</b>
 <p>
-Hello! I am Gopi Krishnan. I'm currently working at Intuit as a Senior Software Engineer on the <http://www.txtweb.com>txtWeb. This project aims at transforming the lives of billions of people who have access to a feature phone by delivering internet content via SMS.
+Hello! I am Gopi Krishnan. I currently work at Intuit as a Senior Software Engineer on the <a href="http://www.txtweb.com">txtWeb Platform</a>. This project aims at transforming the lives of billions of people who have access to a feature phone by delivering internet content via SMS.
 </p>
 <b>Education</b>
 <p> 
 B.E.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;P.E.S. Institute of Technology, Bangalore, India<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;September 2007 - August 2011
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;September 2007 - August 2011
 </p>
 
