--- a/pages/about.html
+++ b/pages/about.html
@@ -2,17 +2,18 @@
 layout: page
 title: "About"
 description: ""
+categories : [about]
+tags : [about]
 ---
 
 {% include JB/setup %}
 
 <b>Hi</b>
 <p>
-Hello! I am Gopi Krishnan. I currently work at Intuit as a Senior Software Engineer on the <a href="http://www.txtweb.com">txtWeb Platform</a>. This project aims at transforming the lives of billions of people who have access to a feature phone by delivering internet content via SMS.
+	Hello! I am Gopi Krishnan. I currently work at Intuit as a Senior Software Engineer on the <a href="http://www.txtweb.com">txtWeb Platform</a>. This project aims at transforming the lives of billions of people who have access to a feature phone by delivering internet content via SMS. I completed my undergraduate studies from PES Institue of Technology, Bangalore. I love reading, swimming and watching movies in my spare time.
 </p>
-<b>Education</b>
+	<b>Education</b>
 <p> 
-B.E.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;P.E.S. Institute of Technology, Bangalore, India<br/>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;September 2007 - August 2011
+	B.E.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;P.E.S. Institute of Technology, Bangalore, India<br/>
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;September 2007 - August 2011
 </p>
-
