Change about page

--- a/pages/about.html
+++ b/pages/about.html
@@ -14,6 +14,10 @@ tags : [about]
 </p>
 	<b>Education</b>
 <p> 
-	B.E.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;P.E.S. Institute of Technology, Bangalore, India<br/>
+	BE.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;P.E.S. Institute of Technology, Bangalore, India<br/>
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;September 2007 - August 2011
+</p>
+<p> 
+	MS CS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Georgia Institute of Technology, Atlanta, GA<br/>
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;August 2014 - Present
 </p>
