--- a/pages/index.html
+++ b/pages/index.html
@@ -31,11 +31,9 @@ var margin = {top: 30, right: 20, bottom: 30, left: 50},
     width = 600 - margin.left - margin.right,
     height = 270 - margin.top - margin.bottom;
 
-// Parse the date / time
-var parseDate = d3.time.format("%d-%b-%y").parse;
 
 // Set the ranges
-var x = d3.time.scale().range([0, width]);
+var x = d3.scale.linear().range([0, width]);
 var y = d3.scale.linear().range([height, 0]);
 
 // Define the axes
@@ -62,12 +60,12 @@ var svg = d3.select("body")
 // Get the data
 d3.csv("data.csv", function(error, data) {
     data.forEach(function(d) {
-        d.date = parseDate(d.date);
+        d.date = +d.date
         d.close = +d.close;
     });
 
     // Scale the range of the data
-    x.domain(d3.extent(data, function(d) { return d.date; }));
+    x.domain([0, d3.max(data, function(d) { return d.date; })]);
     y.domain([0, d3.max(data, function(d) { return d.close; })]);
 
     // Add the valueline path.
