--- a/pages/wstmdemo.html
+++ b/pages/wstmdemo.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <head>
 <meta charset="utf-8">
-<title>Song Networks: Interative Network Tutorial</title>
+<title>Music Networks</title>
 <meta name="description" content="Demo for How to Build an Interactive Network Visualization.">
 <meta name="viewport" content="width=device-width,initial-scale=1">
  
@@ -28,28 +28,6 @@
 <option value="she_said.json">She Said She Said</option>
 <option value="short_skirt.json">Short Skirt, Long Jacket</option>
 </select>
-</div>
-<div id="controls">
-<div id="layouts" class="control">
-<h3>Layout</h3>
-<a id="force" class="active">Force Directed</a>
-<a id="radial">Artists</a>
-</div>
-<div id="filters" class="control">
-<h3>Filter</h3>
-<a id="all" class="active">All</a>
-<a id="popular">Popular</a>
-<a id="obscure">Obscure</a>
-</div>
-<div id="sorts" class="control">
-<h3>Sort</h3>
-<a id="songs" class="active">Songs</a>
-<a id="links">Links</a>
-</div>
-<div id="search_section" class="control">
-<form id="search_form" action="" method="post">
-<p class="search_title">Search <input type="text" class="text-input" id="search" value=""/></p>
-</form>
 </div>
 <div id="main" role="main">
 <div id="vis"></div>
