--- a/pages/about.html
+++ b/pages/about.html
@@ -10,14 +10,14 @@ tags : [about]
 
 <b>Hi</b>
 <p>
-	Hello! I am Gopi Krishnan. I currently work at Intuit as a Senior Software Engineer on the <a href="http://www.txtweb.com">txtWeb Platform</a>. This project aims at transforming the lives of billions of people who have access to a feature phone by delivering internet content via SMS. I completed my undergraduate studies from PES Institue of Technology, Bangalore. I love reading, swimming and watching movies in my spare time.
+	Hello! I am Gopi Krishnan. I am a Masters student at Georgia Tech. I completed my undergraduate studies from PES Institue of Technology, Bangalore. I love reading, swimming and watching movies in my spare time.
 </p>
 	<b>Education</b>
 <p> 
-	BE.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;P.E.S. Institute of Technology, Bangalore, India<br/>
+	Bachelor of Engineering&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;P.E.S. Institute of Technology, Bangalore, India<br/>
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;September 2007 - August 2011
 </p>
 <p> 
-	MS CS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Georgia Institute of Technology, Atlanta, GA<br/>
+	Masters in Computer Science - specializing in Machine Learning and Big Data&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Georgia Institute of Technology, Atlanta, GA<br/>
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;August 2014 - Present
 </p>
