--- a/pages/about.html
+++ b/pages/about.html
@@ -14,10 +14,12 @@ tags : [about]
 </p>
 	<b>Education</b>
 <p> 
-	Bachelor of Engineering&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;P.E.S. Institute of Technology, Bangalore, India<br/>
-	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;September 2007 - August 2011
+	Bachelor of Engineering <br/> 
+	P.E.S. Institute of Technology, Bangalore, India<br/>
+	September 2007 - August 2011
 </p>
 <p> 
-	Masters in Computer Science - specializing in Machine Learning and Big Data&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Georgia Institute of Technology, Atlanta, GA<br/>
-	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;August 2014 - Present
+	Masters in Computer Science - specializing in Machine Learning and Big Data<br/>
+	Georgia Institute of Technology, Atlanta, GA<br/>
+	August 2014 - Present<br/>
 </p>
