--- a/pages/about.html
+++ b/pages/about.html
@@ -8,9 +8,8 @@ tags : [about]
 
 {% include JB/setup %}
 
-<b>Hi</b>
 <p>
-	Hello! I am Gopi Krishnan. I am a Masters student at Georgia Tech. I completed my undergraduate studies from PES Institue of Technology, Bangalore. I love reading, swimming and watching movies in my spare time.
+	Hello! I am Gopi Krishnan. I am currently working as a Software Development Intern at Salesforce in San Francisco. I am in my second year of my Masters at Georgia Tech.
 </p>
 	<b>Education</b>
 <p> 
