--- a/about/index.html
+++ b/about/index.html
@@ -7,13 +7,17 @@ tags : [about]
 ---
 
 {% include JB/setup %}
-
-<b>Hi</b>
 <p>
-	Hello! I am Gopi Krishnan. I currently work at Intuit as a Senior Software Engineer on the <a href="http://www.txtweb.com">txtWeb Platform</a>. This project aims at transforming the lives of billions of people who have access to a feature phone by delivering internet content via SMS. I completed my undergraduate studies from PES Institue of Technology, Bangalore. I love reading, swimming and watching movies in my spare time.
+	Hello! I am Gopi Krishnan. I am currently working as a Software Development Intern at Salesforce in San Francisco. I am in my second year of my Masters at Georgia Tech.
 </p>
 	<b>Education</b>
-<p>
-	B.E.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;P.E.S. Institute of Technology, Bangalore, India<br/>
-	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;September 2007 - August 2011
+<p> 
+	Bachelor of Engineering <br/> 
+	P.E.S. Institute of Technology, Bangalore, India<br/>
+	September 2007 - August 2011
+</p>
+<p> 
+	Masters in Computer Science - specializing in Machine Learning and Big Data<br/>
+	Georgia Institute of Technology, Atlanta, GA<br/>
+	August 2014 - Present<br/>
 </p>
