--- a/about/index.html
+++ b/about/index.html
@@ -8,7 +8,7 @@ tags : [about]
 
 {% include JB/setup %}
 <p>
-	Hello! I am Gopi Krishnan. I am currently working as a Software Development Intern at Salesforce in San Francisco. I am in my second year of my Masters at Georgia Tech.
+	Hello! I am Gopi Krishnan. I am currently working as a Software Engineer at Salesforce HQ in their Big Data group. I completed my Masters in CS with a Machine Learning + Big Data focus at Georgia Tech in 2016.
 </p>
 	<b>Education</b>
 <p> 
@@ -19,5 +19,5 @@ tags : [about]
 <p> 
 	Masters in Computer Science - specializing in Machine Learning and Big Data<br/>
 	Georgia Institute of Technology, Atlanta, GA<br/>
-	August 2014 - Present<br/>
+	August 2014 -  May 2016<br/>
 </p>
