--- a/about/index.html
+++ b/about/index.html
@@ -7,17 +7,8 @@ tags : [about]
 ---
 
 {% include JB/setup %}
-<p>
-	Hello! I am Gopi Krishnan. I am currently working as a Software Engineer at Salesforce HQ in their Big Data group. I completed my Masters in CS with a Machine Learning + Big Data focus at Georgia Tech in 2016.
-</p>
-	<b>Education</b>
-<p> 
-	Bachelor of Engineering <br/> 
-	P.E.S. Institute of Technology, Bangalore, India<br/>
-	September 2007 - August 2011
-</p>
-<p> 
-	Masters in Computer Science - specializing in Machine Learning and Big Data<br/>
-	Georgia Institute of Technology, Atlanta, GA<br/>
-	August 2014 -  May 2016<br/>
-</p>
+I’m Gopi Krishnan Nambiar, an engineer interested in Machine Learning and Distributed Systems.
+
+I work at Salesforce’s Big Data team and help build the applog ingestion and processing pipeline. Earlier, I worked for Intuit Bangalore on a text application platform - txtWeb.
+
+I completed my Masters in CS (ML+Big Data) at Georgia Tech, during which I TA’ed the course Data and Visual Analytics under Prof. Polo Chau. I also dabbled with fraud detection models during my summer internship with the Security Analytics team at Salesforce.
