--- a/about/index.html
+++ b/about/index.html
@@ -7,8 +7,8 @@ tags : [about]
 ---
 
 {% include JB/setup %}
-I’m Gopi Krishnan Nambiar, an engineer interested in Machine Learning and Distributed Systems.
+I’m Gopi Krishnan Nambiar, a software engineer interested in Machine Learning and Distributed Systems.
 
-I work at Salesforce’s Big Data team and help build the applog ingestion and processing pipeline. Earlier, I worked for Intuit Bangalore on a text application platform - txtWeb.
+I work at Salesforce’s Einstein.ai team and help build deep learning systems. Earlier, I worked on high volume Data Ingestion pipelines on the Salesforce Big Data team and also at Intuit Bangalore on a text application platform - txtWeb.
 
-I completed my Masters in CS (ML+Big Data) at Georgia Tech, during which I TA’ed the course Data and Visual Analytics under Prof. Polo Chau. I also dabbled with fraud detection models during my summer internship with the Security Analytics team at Salesforce.
+I completed my Masters in CS (Machine Learning) at Georgia Tech, during which I was the head TA for the course Data and Visual Analytics under Prof. Polo Chau. I also dabbled with fraud detection models during my summer internship with the Security Analytics team at Salesforce.
