--- a/pages/about.html
+++ b/pages/about.html
@@ -9,7 +9,7 @@ tags : [about]
 {% include JB/setup %}
 
 <p>
-	Hello! I am Gopi Krishnan. I am currently working as a Software Development Intern at Salesforce in San Francisco. I am in my second year of my Masters at Georgia Tech.
+	Hello! I am Gopi Krishnan. I am currently working as a Lead Engineer at Salesforce in their Einstein.ai group. Earlier I worked on high volume data ingestion pipelines for the Big Data Group.
 </p>
 	<b>Education</b>
 <p> 
@@ -18,7 +18,7 @@ tags : [about]
 	September 2007 - August 2011
 </p>
 <p> 
-	Masters in Computer Science - specializing in Machine Learning and Big Data<br/>
+	Masters in Computer Science - specializing in Machine Learning<br/>
 	Georgia Institute of Technology, Atlanta, GA<br/>
-	August 2014 - Present<br/>
+	August 2014 - May 2016<br/>
 </p>
