--- a/about/index.html
+++ b/about/index.html
@@ -9,6 +9,6 @@ tags : [about]
 {% include JB/setup %}
 I’m Gopi Krishnan Nambiar, a software engineer interested in Machine Learning and Distributed Systems.
 
-I work at Salesforce’s Einstein.ai team and help build deep learning systems. Earlier, I worked on high volume Data Ingestion pipelines on the Salesforce Big Data team and also at Intuit Bangalore on a text application platform - txtWeb.
+I work at Meta's Stories Ranking team, with a focus on Notifications, Stories and Messaging experiences. Earlier I used to work for Salesforce’s Einstein.ai team and help build deep learning systems and high volume data ingestion pipelines. 
 
 I completed my Masters in CS (Machine Learning) at Georgia Tech, during which I was the head TA for the course Data and Visual Analytics under Prof. Polo Chau. I also dabbled with fraud detection models during my summer internship with the Security Analytics team at Salesforce.
