--- a/pages/about.html
+++ b/pages/about.html
@@ -9,16 +9,15 @@ tags : [about]
 {% include JB/setup %}
 
 <p>
-	Hello! I am Gopi Krishnan. I am currently working as a Lead Engineer at Salesforce in their Einstein.ai group. Earlier I worked on high volume data ingestion pipelines for the Big Data Group.
+	Hello! I am Gopi Krishnan. I am currently working as an Machine Learning Engineer at Meta in their Stories and Messaging Experience team.
+	Earlier, I was at Salesforce's Einstein.ai group building on Deep Learning Systems
 </p>
 	<b>Education</b>
 <p> 
 	Bachelor of Engineering <br/> 
-	P.E.S. Institute of Technology, Bangalore, India<br/>
-	September 2007 - August 2011
+	P.E.S. Institute of Technology, Bangalore<br/>
 </p>
 <p> 
 	Masters in Computer Science - specializing in Machine Learning<br/>
 	Georgia Institute of Technology, Atlanta, GA<br/>
-	August 2014 - May 2016<br/>
 </p>
