--- a/pages/about.html
+++ b/pages/about.html
@@ -9,15 +9,15 @@ tags : [about]
 {% include JB/setup %}
 
 <p>
-	Hello! I am Gopi Krishnan. I am currently working as an Machine Learning Engineer at Meta in their Stories and Messaging Experience team.
-	Earlier, I was at Salesforce's Einstein.ai group building on Deep Learning Systems
+	Hello! I am Gopi Krishnan. I am currently working as a Machine Learning Engineer at Meta in their Stories and Messaging Experience team.
+	Earlier, I was at Salesforce's Einstein.ai group building Deep Learning Systems
 </p>
 	<b>Education</b>
 <p> 
 	Bachelor of Engineering <br/> 
-	P.E.S. Institute of Technology, Bangalore<br/>
+	P.E.S. Institute of Technology, Bangalore, KA<br/>
 </p>
 <p> 
-	Masters in Computer Science - specializing in Machine Learning<br/>
+	Masters in Computer Science - Machine Learning focus<br/>
 	Georgia Institute of Technology, Atlanta, GA<br/>
 </p>
