--- a/about/index.html
+++ b/about/index.html
@@ -9,6 +9,6 @@ tags : [about]
 {% include JB/setup %}
 I’m Gopi Krishnan Nambiar, a software engineer interested in Machine Learning and Distributed Systems.
 
-I work at Meta's Stories Ranking team, with a focus on Notifications, Stories and Messaging experiences. Earlier I used to work for Salesforce’s Einstein.ai team and help build deep learning systems and high volume data ingestion pipelines. 
+I work for Meta as an ML Engineer in the Stories Ranking team, with a focus on Notifications, Stories and Messaging experiences. Earlier I used to work for Salesforce’s Einstein.ai group building Deep Learning systems and have also dabbled with high volume data ingestion pipelines. 
 
-I completed my Masters in CS (Machine Learning) at Georgia Tech, during which I was the head TA for the course Data and Visual Analytics under Prof. Polo Chau. I also dabbled with fraud detection models during my summer internship with the Security Analytics team at Salesforce.
+I completed my Masters in Computer Science (Machine Learning) at Georgia Tech, where I was the head TA for Data and Visual Analytics (CSE 6242) under Prof. Polo Chau and Graduate Research Assistant at the Tenenbaum Institute working on a UAV simulator application under Prof. Doug Bodner. 
